--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.18
 django-allauth==0.52.0
 django-crispy-forms==1.14.0
 django-daterange-filter==1.3.0
+django-daterangefilter==1.0.0
 django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
